--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "homepage": "https://<your_github_username>.github.io/<your_repo_name>/"
   }
 }
