--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://<your_github_username>.github.io/<your_repo_name>/"
+    "homepage": "https://mrabaajr.github.io/Porfolio/"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
