--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://mrabaajr.github.io/Porfolio/"
+    ]
   },
+  "homepage": "https://mrabaajr.github.io/Porfolio/",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
