--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://mrabaajr.github.io/Porfolio/",
+  "homepage": "https://mrabaajr.github.io/Portfolio/",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
